# eks-gitops-project

backend/: .gitignore  Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js
