[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.2", features = ["full"] }
axum = "0.6.1"
serde = { version = "1.0.150", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tower-http = { version = "0.3.5", features = ["cors"] }
